--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ ul {
 }
 
 li {
-    background: #060606;
+    background: #fcfafa;
     padding: 10px;
     margin-bottom: 8px;
     border-radius: 4px;
